# sqlalchemy-play

./: db.sqlite  pyproject.toml
sqlalchemy_play/: list-applications.py  polymorphic-cartesian-sti.py  polymorphic-cartesian.py
sqlalchemy_play/model/: applications.py  stiapplications.py
